example/gateway-api/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: "*.pinax.network"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.pinax.network"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
