example/gateway-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-api
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "httproute.dnstest.pinax.network"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-service
          port: 80
